--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
       <a href="aboutus.html" class="btn btn-primary rounded-2 text-capitalize px-5 mt-1 mt-lg-2">read all articles</a>
     </div>
   </section>-->
-<script type="text/javascript" src="https://form.jotform.com/jsform/242940670144151"></script>
+<script type="text/javascript" src="https://form.jotform.com/242940514178155"></script>
   <!-- apply for loan 
   <section id="loan" class="padding-small pt-0" data-aos="fade-up">
     <div class="container-sm text-center">
