--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
       <div class="row align-items-center ">
         <div class="col-lg-6">
           <div class="image-holder text-end">
-            <img src="images/vid.mov" alt="slitlamp video clip" class="img-fluid ">
+            <img src="images/vid.mp4" alt="slitlamp video clip" class="img-fluid ">
           </div>
         </div>
         <div class="col-lg-6 mt-5 mt-lg-0" data-aos="fade-left">
