--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
       <div class="row align-items-center ">
         <div class="col-lg-6">
           <div class="image-holder text-end">
-            <video src="images/vid.mp4" alt="slitlamp video clip" class="img-fluid" type="video/mp4"></video>
+            <video autoplay src="images/vid.mp4" alt="slitlamp video clip" class="img-fluid" type="video/mp4"></video>
           </div>
         </div>
         <div class="col-lg-6 mt-5 mt-lg-0" data-aos="fade-left">
