--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
     </div>
   </section>
 
-  <!-- types of loan section -->
+  <!-- types of service section -->
   <section id="service" class="type-loan container-md padding-small" data-aos="fade-up">
     <div class="container-sm banner-content align-items-center justify-content-center text-center mb-5">
       <p class="fw-medium text-primary sub-heading text-uppercase">services we offer</p>
@@ -359,7 +359,7 @@
       <div class="row align-items-center ">
         <div class="col-lg-6">
           <div class="image-holder text-end">
-            <video controls loop src="images/vid.mp4" alt="slitlamp video clip" class="img-fluid" type="video/mp4"></video>
+            <video autoplay loop src="images/vid.mp4" alt="slitlamp video clip" class="img-fluid" type="video/mp4"></video>
           </div>
         </div>
         <div class="col-lg-6 mt-5 mt-lg-0" data-aos="fade-left">
