--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="shortcut icon" type="x-icon" href="images/favicon-32x32.png">
   <title>Correctional Vision: Improving Vision, Transforming Lives.</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
