--- a/about.html
+++ b/about.html
@@ -208,7 +208,7 @@
 
 <br>Our team of skilled optometrists and ophthalmologists is committed to improving the quality of life for those in correctional settings. We strive to enhance vision, health, and well-being, offering care that not only meets immediate needs but also promotes long-term eye health.</br>
 
-<br>At Correctional Vision, we’re transforming lives—one sight at a time.</p>
+<br>At Correctional Vision, we’re transforming lives—one vision at a time.</p>
         </div>
       </div>
 
