--- a/about.html
+++ b/about.html
@@ -150,6 +150,9 @@
                 <a class="nav-link text-titlecase active p-0" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item px-4">
+                <a class="nav-link text-titlecase p-0" href="career.html">Career </a>
+              </li>
+              <li class="nav-item px-4">
                 <a class="nav-link text-titlecase p-0" href="mission.html">Mission</a>
               </li>
               <li class="nav-item px-4">
@@ -664,6 +667,11 @@
                 <a href="index.html"><svg class=" text-primary me-1" width="16" height="16">
                     <use xlink:href="#alt-arrow"></use>
                   </svg>Home </a>
+              </li>
+               <li class="pb-2">
+                <a href="career.html"><svg class=" text-primary me-1" width="16" height="16">
+                    <use xlink:href="#alt-arrow"></use>
+                  </svg>Career</a>
               </li>
                <li class="pb-2">
                 <a href="mission.html"><svg class=" text-primary me-1" width="16" height="16">
