--- a/career.html
+++ b/career.html
@@ -249,7 +249,7 @@
         <div class="icon-box p-5 text-center border py-lg-7 px-3 rounded-3">
           <div class="icon-box-content ps-3">
             <h4 class="display-6 fs-3 fw-medium text-capitalize">Ultimate Flexibility</h4>
-            <p>You pick the dates, set your hours, and determine number of patients you want to see.</p>
+            <p>You pick the dates, set your hours, and create the schedule on your terms.</p>
           </div>
         </div>
       </div>
@@ -257,7 +257,7 @@
                 <div class="icon-box p-5 text-center border py-lg-7 px-3 rounded-3">
           <div class="icon-box-content ps-3">
             <h4 class="display-6 fs-3 fw-medium text-capitalize">High Earning Potential</h4>
-            <p>We are able to work fewer hours while earning more than what most ODs earn in a full day.</p>
+            <p>Work fewer hours while earning more than what most ODs earn in a full day.</p>
           </div>
         </div>
       </div>
@@ -265,7 +265,7 @@
         <div class="icon-box p-5 text-center border py-lg-7 px-3 rounded-3">
           <div class="icon-box-content ps-3">
             <h4 class="display-6 fs-3 fw-medium text-capitalize">Appreciative Patients</h4>
-            <p>This is a fulfilling line of work serving those who are otherwise limited in their access to care.
+            <p>Find fulfillment in delivering essential care to the underserved.
             </p>
           </div>
         </div>
